# contractor-app

./: .gitignore  BAML.md  CLAUDE.md  README.md  chat.md  edits.md  instructions.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  ui_changes.md  video_processing.md  vitest.config.ts
.cursor/: mcp.json
.cursor/rules/: baml.mdc  claude.mdc  interactive-feedback.mdc  project_overview.mdc  python_format.mdc  python_typing.mdc
.github/workflows/: ci.yml
apps/langgraph/: .gitignore  README.md  construction_estimate.json  langgraph.json  package-lock.json  pyproject.toml
apps/langgraph/baml_client_py/baml_client/: async_client.py  inlinedbaml.py  sync_request.py
apps/langgraph/examples/: README.md  construction_estimate.json  package-lock.json  package.json  run_file_processor.py  run_file_processor_api.js  run_file_processor_api_stream.js
apps/langgraph/src/file_processor/: __init__.py  configuration.py  graph.py  state.py  video_graph.py
apps/langgraph/src/file_processor/baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
apps/langgraph/src/file_processor/examples/: run_file_processor.py  run_file_processor_api_stateful.js  run_file_processor_api_stateful_stream.js
apps/langgraph/tests/integration_tests/: test_graph.py  test_url_download.py
apps/langgraph/tests/unit_tests/: test_configuration.py  test_pdf_processing_unit.py  test_video_processing_unit.py
apps/web/: CLAUDE.md  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: app-client-shell.tsx  globals.css  layout.tsx  page.tsx  types.d.ts
apps/web/app/auth/confirm/: route.ts
apps/web/app/dashboard/: CreateProjectForm.tsx  DeleteProjectButton.tsx  actions.ts  page.tsx
apps/web/app/error/: page.tsx
apps/web/app/login/: actions.ts  page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/projects/[id]/: actions.ts  editable-actions.ts  editable-estimate-row.tsx  error.tsx  loading.tsx  page.tsx
apps/web/app/projects/[id]/components/: ChatInterface.tsx
apps/web/baml_client/baml_client/: async_client.ts  async_request.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
apps/web/baml_client/baml_client/react/: hooks.tsx  server.ts  server_streaming.ts  server_streaming_types.ts
apps/web/components/: add-line-item-form.tsx  chat-panel.tsx  header-nav.tsx  new-project-button.tsx  new-project-dialog.tsx  project-sidebar.tsx  video-summary-card.tsx
apps/web/components/ui/: dialog.tsx  tooltip.tsx
apps/web/examples/api/: README.md  construction_estimate_api.json  package-lock.json  package.json  run_file_processor_api.ts  tsconfig.json
apps/web/lib/: client-upload.ts  estimate-patch-utils.ts  file-utils.ts
apps/web/lib/supabase/: middleware.ts
apps/web/supabase/: config.toml  seed.sql
apps/web/supabase/migrations/: 20240501_1332_create_tables_and_storage.sql  20240505_1200_add_task_jobs_table.sql  20250501_1332_create_tables_and_storage.sql  20250505_1200_add_task_jobs_table.sql  20250508_1350_add_chat_tables.sql  20250513_1056_add_video_processing.sql
apps/web/tests/unit/: estimate-patch-utils.test.ts
baml_src/: README.md  chat.baml  clients.baml  contractor.baml  file_processor.baml  generators.baml
components/: editable-estimate-item.tsx
(+4 files in other folders)
