[project]
name = "file-processor"
version = "0.0.1"
description = "Contractor File Processing Agent using LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.1.27",
    "langchain-google-genai>=0.0.9",
    "langchain-openai>=0.0.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.5",
    "aiohttp>=3.9.0",
    "baml-py==0.86.1"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["file_processor"]
[tool.setuptools.package-dir]
"file_processor" = "src/file_processor"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
exclude = ["src/file_processor/baml_client/**"]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "T201",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
